[package]
name = "shenxing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
arrow = { version = "52.2.0", features = ["prettyprint"] }
chrono = "0.4.38"
clap = { version = "4.5.13", features = ["derive"] }
datafusion = { version = "40.0.0", features = ["serde"] }
serde = "1.0.204"
serde_json = "1.0.122"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
reedline-repl-rs = { version = "1.1.1", features = ["derive"] }
dirs = "5.0.1"
